# RenderLab

./: .gitignore  CMakeLists.txt  README.md  README.txt  README_zh.md  build.bat  build.sh  demo.cpp  face-1.txt  face-2.txt  face-3.txt  imgui.ini  requirements.txt  show.py  table.cpp  table_parallel.cpp  test  test.cpp  worklog.md
.github/workflows/: cmake-build.yml  cmake.yml
backend/: CMakeLists.txt  pyproject.toml  setup.cfg
backend/remesh_backend/: __init__.py  args.py  remesh.py
cmake/: OpenMP.cmake  dependency.cmake
resource/shader/: background.fs  background.vs  default.fs  default.vs
scripts/: build_glfw.sh  check.py  data_check.py  ml_server.py  ml_train.py  obj_checker.py  py_env_checker.py  py_load_project.py  py_mesh_palette.py  py_nurbs_toolkit.py  py_parameter_remesh.py  py_tooth_depth.py
scripts/remesh/: args.py  param.py  remesh.py  run.py  utils.py  validate.py
src/: CMakeLists.txt  disable_main.cpp  disable_main_test.cpp  execute.hpp  main.cpp  main_table.cpp  nurbs_lib.hpp  train_and_test.hpp  utils.hpp
src/GUI/: CMakeLists.txt  engine.cpp  engine.h  service.cpp  service.h  viewer.cpp  viewer.h
src/GUI/components/: base.h  controller.cpp  controller.h  file_browser.cpp  logger.cpp  logger.h  modal_confirm.cpp  modal_confirm.h  node_flow.cpp  node_flow.h  project_panel.cpp  project_panel.h  zmo.cpp  zmo.h
src/infrastructure/: CMakeLists.txt
src/infrastructure/communication/: AutoBus.hpp  ContextHub.h  Event.hpp  Service.hpp
src/infrastructure/container/: queue.hpp
src/infrastructure/utilities/: ThreadPool.cpp  ThreadPool.h  Timer.hpp  singleton.h
src/libs/: CMakeLists.txt  coords.cpp  coords.h  line.cpp  line.h  nurbs.cpp  nurbs.h  surface.cpp  surface.h
src/libs/geometry/: CMakeLists.txt  geom_types.h  intersection.cpp  intersection.h  line.hpp  mesh.cpp  mesh.h  types.h
src/libs/infrastructure/communication/: ContextHub.cpp  Event.hpp
src/libs/infrastructure/utilities/: ThreadPool.cpp  Timer.hpp
src/render/: CMakeLists.txt  container.cpp  container.h  context.cpp  context.h  drawable.cpp  drawable.h  elements.cpp  elements.h  engine.cpp  engine.h  executor.cpp  executor.h  invoker.cpp  invoker.h  renderer.cpp  renderer.h  service.cpp  service.h  shader.cpp  shader.h  shader.hpp  xwindow.cpp  xwindow.h
src/render/filebrowser/: browser.cpp  browser.h
src/render/geom_ext/: drawable.cpp  drawable.h  palette.cpp  palette.h
src/render/glm_ext/: LU_decompose.hpp  curvature.hpp  ray.hpp  triangle.hpp
src/render/imgui_ext/: browser.cpp  browser.h  controller.cpp  controller.h  logger.cpp  logger.h  mesh_viewer.cpp  mesh_viewer.h  meshbox.cpp  meshbox.h
src/render/libs/GLFW/: libglfw.3.dylib
src/render/libs/freetype/: libfreetype.dylib
src/render/libs/freetype/freetype/: freetype.h  fterrors.h  fttypes.h
src/render/libs/freetype/freetype/config/: ftconfig.h  ftheader.h  ftoption.h
src/render/libs/glad/: glad.c  glad.h
src/render/libs/imgui/: imgui_impl_glfw.cpp
src/render/libs/tgaimage/: tgaimage.cpp  tgaimage.h
src/render/mesh/: assist.cpp  assist.h  drawable.cpp  drawable.h  elements.cpp  elements.h  parameterization.cpp  parameterization.h  typedef.hpp
src/render/text/: character.cpp  character.h  textbox.cpp  textbox.h
src/tooth/: CMakeLists.txt  drawable_ext.cpp  drawable_ext.h  engine.cpp  engine.h  execute.cpp  execute.h  printer.cpp  printer.h  service.cpp  service.h  toolkit.cpp  toolkit.h  tooth_pack.cpp  tooth_pack.h  typedef.h  wkflow_context.h  workflow.cpp  workflow.h
src/xtooth/: CMakeLists.txt  engine.cpp  engine.h  service.cpp  service.h
static/: face-4.txt
static/N1/: face 1.txt  face 2.txt  face 3.txt  face 4.txt
static/N10/: face 1.txt  face 2.txt  face 3.txt  face 4.txt
static/N2/: face 1.txt  face 2.txt  face 3.txt
static/N3/: face 1.txt  face 2.txt  face 3.txt
static/N4/: face 1.txt  face 2.txt  face 3.txt  face 4.txt
static/N5/: face 1.txt  face 2.txt  face 3.txt  face 4.txt
static/N6/: face 1.txt  face 2.txt  face 3.txt  face 4.txt
static/N7/: face 1.txt  face 2.txt  face 3.txt
static/N8/: face 1.txt  face 2.txt  face 3.txt
static/N9/: face 1.txt  face 2.txt  face 3.txt  face 4.txt
static/dataset/: edge_line.pkl  multi_gbr.pkl  uv_pivot.pkl
static/nurbs/N1/: face 1.txt  face 2.txt  face 3.txt  face 4.txt
static/nurbs/N10/: face 1.txt  face 2.txt  face 3.txt  face 4.txt
static/nurbs/N2/: face 1.txt  face 2.txt  face 3.txt  face 4.txt
static/nurbs/N3/: face 1.txt  face 2.txt  face 3.txt  face 4.txt
static/nurbs/N4/: face 1.txt  face 2.txt  face 3.txt  face 4.txt
static/nurbs/N5/: face 1.txt  face 2.txt  face 3.txt  face 4.txt
static/nurbs/N6/: face 1.txt  face 2.txt  face 3.txt  face 4.txt
static/nurbs/N7/: face 1.txt  face 2.txt  face 3.txt  face 4.txt
static/nurbs/N8/: face 1.txt  face 2.txt  face 3.txt  face 4.txt
static/nurbs/N9/: face 1.txt  face 2.txt  face 3.txt  face 4.txt
static/nurbs/sample/: face 1.txt  face 2.txt  face 3.txt  face 4.txt
static/sample/: face 1.txt  face 2.txt  face 3.txt  face 4.txt
test/: show.py
tests/: test_glm_ext.cpp
