[metadata]
name = remesh-backend
version = 0.0.2
author = carol
author_email = herixth@163.com
description = a simple parameterization remesh method
url = https://github.com/hx-w/RenderLab
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = remesh_backend
packages = find:
python_requires = >=3.6

[options.packages.find]
where = remesh_backend