file(GLOB_RECURSE SRCS ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
file(GLOB_RECURSE HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
add_library(NURBS_LIB ${SRCS})
target_include_directories(NURBS_LIB INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})

install(TARGETS NURBS_LIB DESTINATION lib) 
install(FILES ${HEADERS} DESTINATION include) 