file(GLOB_RECURSE SRCS ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
file(GLOB_RECURSE HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
file(GLOB_RECURSE HPPS ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)
add_library(GEOMETRY ${SRCS} ${HEADERS} ${HPPS})
target_include_directories(GEOMETRY INTERFACE ${GLM_INCLUDE_DIR})
set(GEOMETRY_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR} CACHE INTERNAL "GEOMETRY include directories" FORCE)